# cho_robot_project

./: .gitignore  .gitmodules  README.md
cho_controller/cho_controller_common/: CMakeLists.txt  package.xml
cho_controller/cho_controller_common/include/cho_controller_common/contact/: contact_base.hpp  fwd.hpp
cho_controller/cho_controller_common/include/cho_controller_common/formulation/: contact_level.hpp  inverse_dynamics_formulation_acc.hpp  inverse_dynamics_formulation_base.hpp
cho_controller/cho_controller_common/include/cho_controller_common/math/: constraint_base.hpp  constraint_bound.hpp  constraint_equality.hpp  constraint_inequality.hpp  fwd.hpp  util.hpp
cho_controller/cho_controller_common/include/cho_controller_common/robot/: fwd.hpp  robot_wrapper.hpp
cho_controller/cho_controller_common/include/cho_controller_common/solver/: fwd.hpp  solver_HQP_base.hpp  solver_HQP_eiquadprog.hpp  solver_HQP_eiquadprog_fast.hpp  solver_HQP_eiquadprog_rt.hpp  solver_HQP_factory.hpp  solver_HQP_output.hpp  solver_HQP_qpoases.hpp
cho_controller/cho_controller_common/include/cho_controller_common/tasks/: task_base.hpp  task_contact_force.hpp  task_joint_posture.hpp  task_motion.hpp  task_se3_equality.hpp
cho_controller/cho_controller_common/include/cho_controller_common/trajectory/: trajectory_base.hpp  trajectory_euclidian.hpp  trajectory_se3.hpp
cho_controller/cho_controller_common/include/cho_controller_common/util/: stop_watch.hpp
cho_controller/cho_controller_common/src/contact/: contact_base.cpp
cho_controller/cho_controller_common/src/formulation/: contact_level.cpp  inverse_dynamics_formulation_acc.cpp  inverse_dynamics_formulation_base.cpp
cho_controller/cho_controller_common/src/math/: constraint_base.cpp  constraint_bound.cpp  constraint_equality.cpp  constraint_inequality.cpp  util.cpp
cho_controller/cho_controller_common/src/robot/: robot_wrapper.cpp
cho_controller/cho_controller_common/src/solver/: solver_HQP_base.cpp  solver_HQP_eiquadprog.cpp  solver_HQP_eiquadprog_fast.cpp  solver_HQP_factory.cpp  solver_HQP_qpoases.cpp
cho_controller/cho_controller_common/src/tasks/: task_base.cpp  task_contact_force.cpp  task_joint_posture.cpp  task_motion.cpp  task_se3_equality.cpp
cho_controller/cho_controller_common/src/trajectory/: trajectory_euclidian.cpp  trajectory_se3.cpp
cho_controller/cho_controller_common/src/util/: stop_watch.cpp
cho_controller/cho_controller_franka/: CMakeLists.txt  cho_controller_franka.xml  package.xml
cho_controller/cho_controller_franka/include/cho_controller_franka/: base_controller.hpp  gravity_compensation_controller.hpp  gripper_controller.hpp  ik_controller.hpp  joint_space_impedance_controller.hpp  joint_space_qp_controller.hpp  operational_space_controller.hpp  robot_utils.hpp  task_space_impedance_controller.hpp  task_space_qp_controller.hpp  vla_controller.hpp
cho_controller/cho_controller_franka/include/cho_controller_franka/servers/: base_action_server.hpp  gripper_action_server.hpp  joint_space_action_server.hpp  task_space_action_server.hpp  vla_action_server.hpp
cho_controller/cho_controller_franka/src/: base_controller.cpp  gravity_compensation_controller.cpp  gripper_controller.cpp  ik_controller.cpp  joint_space_impedance_controller.cpp  joint_space_qp_controller.cpp  operational_space_controller.cpp  task_space_impedance_controller.cpp  task_space_qp_controller.cpp  vla_controller.cpp
cho_controller/cho_controller_franka/src/servers/: gripper_action_server.cpp  joint_space_action_server.cpp  task_space_action_server.cpp  vla_action_server.cpp
cho_controller/utils/cho_trajectory_smoother/: CMakeLists.txt  package.xml
cho_controller/utils/cho_trajectory_smoother/include/cho_trajectory_smoother/: Path.h  Trajectory.h
cho_controller/utils/cho_trajectory_smoother/src/: Path.cpp  Trajectory.cpp
cho_interfaces/: CMakeLists.txt  package.xml
cho_interfaces/action/: Gripper.action  TaskSpace.action  VisionLanguageAction.action
cho_interfaces/msg/: ActionChunk.msg  PoseLog.msg
cho_robots_bringup/cho_franka_bringup/: CMakeLists.txt  package.xml
cho_robots_bringup/cho_franka_bringup/config/gazebo/: controllers.yaml
cho_robots_bringup/cho_franka_bringup/config/mujoco/: controllers.yaml
cho_robots_bringup/cho_franka_bringup/config/real/: controllers.yaml  franka.config.yaml
cho_robots_bringup/cho_franka_bringup/launch/: bringup_gazebo_robot.launch.py  bringup_mujoco_robot.launch.py  bringup_real_robot.launch.py
cho_robots_bringup/cho_franka_bringup/scripts/: mock_franka_gripper.py
cho_robots_description/cho_franka_description/: .gitignore  CHANGELOG.rst  CMakeLists.txt  package.xml
cho_robots_description/cho_franka_description/end_effectors/cobot_pump/: cobot_pump.urdf.xacro  cobot_pump_arguments.xacro
cho_robots_description/cho_franka_description/end_effectors/common/: ee_with_one_link.xacro  franka_hand.xacro  utils.xacro
cho_robots_description/cho_franka_description/end_effectors/franka_hand/: franka_hand.urdf.xacro  franka_hand_arguments.xacro
cho_robots_description/cho_franka_description/robots/common/: franka_arm.ros2_control.xacro  franka_arm.srdf.xacro  franka_arm.xacro  franka_robot.xacro  utils.xacro
cho_robots_description/cho_franka_description/robots/fr3/: fr3.srdf.xacro  fr3.urdf.xacro
cho_robots_description/cho_franka_description/rviz/: visualize_franka.rviz
cho_robots_description/cho_franka_description/urdf/fr3/: fr3_franka_hand.urdf
cho_robots_description/cho_franka_description/urdf/fr3_with_ft_sensor/: fr3_franka_hand.urdf
cho_robots_description/cho_franka_description/xml/fr3/: fr3.xml
cho_robots_description/cho_franka_description/xml/fr3_with_ft_sensor/: fr3.xml
cho_task_manager/: package.xml  setup.cfg  setup.py
cho_task_manager/cho_task_manager/: task_manager_node.py
cho_task_manager/cho_task_manager/tasks/: pick_and_place.py
cho_task_manager/cho_task_manager/utils/: controller_names.py  msg_utils.py
cho_task_manager/launch/: run_task_manager.launch.py
cho_task_manager/python/: action_client.py  plot_pose_log.py  vla_action_client.py
(+9 files in other folders)
